Fix vault docker hover selection white clipping outside of the GUI

--- a/theme.css
+++ b/theme.css
@@ -1,5 +1,3 @@
-/*TODO: Make the selection boxes not glitch out of the rounded corners (buttons and settings on vault dockor for example) */
-
 body {
 	--radius-s: 0px;
 	--radius-m: 0px;
@@ -745,6 +743,23 @@ body:not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-p
 	position: relative;
 	z-index: 1;
 }
+
+/* Prevent extruded selection boxes */
+.workspace-sidedock-vault-profile .clickable-icon:has(.svg-icon.lucide-settings),
+.workspace-sidedock-vault-profile button:has(.svg-icon.lucide-settings) {
+	border-radius: 0px 10px 10px 0px;
+	overflow: hidden;
+	clip-path: inset(0 round 0px 10px 10px 0px);
+	contain: paint;
+}
+
+.workspace-sidedock-vault-profile {
+	overflow: hidden;
+	clip-path: inset(0 10px 0 10px round 10px);
+	contain: paint;
+}
+
+
 
 /* middle-specific spacing only */
 /*
